# VoxCPM

./: .cnb.yml  .gitignore  Dockerfile  LICENSE  README.md  app.py  init.sh  push.sh  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
src/voxcpm/: __init__.py  cli.py  core.py  zipenhancer.py
src/voxcpm/model/: __init__.py  utils.py  voxcpm.py
src/voxcpm/modules/audiovae/: __init__.py  audio_vae.py
src/voxcpm/modules/layers/: __init__.py  scalar_quantization_layer.py
src/voxcpm/modules/locdit/: __init__.py  local_dit.py  unified_cfm.py
src/voxcpm/modules/locenc/: __init__.py  local_encoder.py
src/voxcpm/modules/minicpm4/: __init__.py  cache.py  config.py  model.py
src/voxcpm/utils/: text_normalize.py
